# fast-zero

./: .gitignore  README.md  pyproject.toml  task.bat
.github/workflows/: test.yml
src/fast_zero/: app.py  database.py  models.py  schemas.py  settings.py
tests/: conftest.py  test_app.py  test_db.py
